<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="MAIN" Id="{688ee701-2e78-402a-871f-5953e56f57cc}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	PT1T2Parameter :			PT1T2_Parameter_Strukt;
	PID_Parameter :				PID_Parameter_Strukt;
	Modus :						System_Modus_Enum := System_Modus_Enum.System_Init;
	T :							REAL := 0.01;
	PID_1 :						PID_Regler;
	PT1T2_1 :					PT1T2_Prozess;
	r0 :						REAL := 0;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[PT1T2Parameter.K := 10;
PT1T2Parameter.T1 := 0.1;
PT1T2Parameter.T2 := 0.01;

PID_Parameter.Kp := PT1T2Parameter.K;
PID_Parameter.Ti := PT1T2Parameter.T1;
PID_Parameter.Td := PT1T2Parameter.T2;

PID_1(r1 := r0, y1 := PT1T2_1.y, Modus := Modus, Param := PID_Parameter, T := T);
PT1T2_1(u := PID_1.u, Modus := Modus, Param := PT1T2Parameter, T := T);
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="30" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="19" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>